--- a/styles/semantic-colors.atom-text-editor.less
+++ b/styles/semantic-colors.atom-text-editor.less
@@ -1,7 +1,7 @@
 /*
  * JavaScript Semantic Highlighting Package for Atom
  *
- * Copyright (c) 2014 Philipp Emanuel Weidmann <pew@worldwidemann.com>
+ * Copyright (c) 2014-2015 Philipp Emanuel Weidmann <pew@worldwidemann.com>
  *
  * Nemo vir est qui mundum non reddat meliorem.
  *
